fix: create organization with user sign up if allowed
