# packages/caliobase/src/entity-module/entities-module.module.ts
@@ -1,5 +1,6 @@
 import { Module, Type } from '@nestjs/common';
 import { TypeOrmModule } from '@nestjs/typeorm';
+import { nonNull } from 'circumspect';
 import { ValidatorOptions } from 'class-validator';
 import { defaultValidatorOptions } from '../defaultValidatorOptions';
 import { createEntityModule } from './createEntityModule';
@@ -8,6 +9,10 @@ export type CaliobaseEntitiesModuleOptions = {
   controllerEntities: Type<unknown>[];
   otherEntities: Type<unknown>[];
   validatorOptions?: ValidatorOptions;
+  profileEntities: {
+    OrganizationProfile: Type<unknown> | null;
+    UserProfile: Type<unknown> | null;
+  };
 };
 
 @Module({})
@@ -16,17 +21,24 @@ export class CaliobaseEntitiesModule {
     controllerEntities,
     otherEntities,
     validatorOptions,
+    profileEntities,
   }: CaliobaseEntitiesModuleOptions) {
     return {
       module: CaliobaseEntitiesModule,
       imports: [
         TypeOrmModule.forFeature([...otherEntities]),
-        ...controllerEntities.map((entity) =>
-          createEntityModule(entity, {
-            ...defaultValidatorOptions,
-            ...validatorOptions,
-          })
-        ),
+        ...[
+          ...controllerEntities,
+          profileEntities.OrganizationProfile,
+          profileEntities.UserProfile,
+        ]
+          .filter(nonNull)
+          .map((entity) =>
+            createEntityModule(entity, {
+              ...defaultValidatorOptions,
+              ...validatorOptions,
+            })
+          ),
       ],
     };
   }
